[gd_scene load_steps=12 format=2]

[ext_resource path="res://Font/pixeltype.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TittleScreen/Setting.tscn" type="PackedScene" id=2]
[ext_resource path="res://TittleScreen/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://TittleScreen/Save.tscn" type="PackedScene" id=4]
[ext_resource path="res://TittleScreen/Load.tscn" type="PackedScene" id=5]
[ext_resource path="res://TittleScreen/Title.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/MenuScreen.gd" type="Script" id=7]
[ext_resource path="res://TittleScreen/SettingsMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene/SoundEffects.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[node name="MenuScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 192.0
margin_bottom = 23.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "Game Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 27.0
margin_right = 192.0
margin_bottom = 110.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 192.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1

[node name="Save" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_right = 192.0
focus_neighbour_top = NodePath("../Title")

[node name="Load" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 21.0
margin_right = 192.0
margin_bottom = 41.0

[node name="Setting" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 42.0
margin_right = 192.0
margin_bottom = 62.0

[node name="Title" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
margin_top = 63.0
margin_right = 192.0
margin_bottom = 83.0
focus_neighbour_bottom = NodePath("../Save")
scene_to_load = "res://Scene/TitleScreen.tscn"

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 114.0
margin_right = 192.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Version 0.0.1 - Beta
Arthor: Alan"
align = 1
valign = 1

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
mouse_filter = 2

[node name="SettingsMenu" parent="." instance=ExtResource( 8 )]
visible = false

[node name="SoundEffects" parent="." instance=ExtResource( 9 )]

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
